[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Game.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GameOverUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/MainMenuUI.tscn" type="PackedScene" id=9]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 8 )]

[node name="MainMenuUI" parent="." instance=ExtResource( 9 )]

[node name="GameOverUI" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Game" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="changeThemeRequest" from="MainMenuUI" to="." method="_on_MainMenuUI_changeThemeRequest"]
[connection signal="startRequest" from="MainMenuUI" to="." method="_on_MainMenuUI_startRequest"]
[connection signal="mainMenuRequest" from="GameOverUI" to="." method="_on_GameOverUI_mainMenuRequest"]
[connection signal="restartRequest" from="GameOverUI" to="." method="_on_GameOverUI_restartRequest"]
[connection signal="gameOver" from="Game" to="." method="_on_Game_gameOver"]
